# diy-speedcoath

./: .gitmodules  CMakeLists.txt  diy-speedcoath.code-workspace  main.c  main.cpp
bluetooth/: CMakeLists.txt  ble_client.c  ble_client.h
button_handler/: CMakeLists.txt  button.cpp  button.h
configs/: FreeRTOSConfig.h  btstack_config.h
display_fnc/: ble_display.c  data_display.c  data_display.cpp  data_display.h  display_functions.cpp  display_functions.h  menu_display.c  menu_display.cpp  menu_display.h  settings_display.c  settings_display.cpp  settings_display.h  setup_display_data.cpp  setup_display_data.h
gps_ublox/: CMakeLists.txt  gps.c  gps.cpp  gps.h  uart_config.c  uart_config.cpp  uart_config.h
inc/: battery.h
inc/display_task/: ble_diplay.h  data_display.h  display_functions.h  display_task.h  menu_display.h
inc/main_task/: main_task.h
src/: battery.c  main.c
src/display_task/: ble_display.c  data_display.c  data_display_settings.c  display_functions.c  display_functions.h  display_task.c  menu_display.c  settings_display.c
src/main_task/: main_task.c
st7565/: CMakeLists.txt  fontlibrary.c  st7567.cpp
